--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     {"name": "Matt Rose", "email": "matt@mattrose.ca"}
   ],
   "dependencies": {
+    "jquery-loader": "ssh://git@stash.carpages.ca/gem/jquery-loader.git",
     "jquery-boiler": "0.1.x"
   }
 }
