Add build and edge test

--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,13 @@
   "main": [
     "gemini.resetform.js"
   ],
-  "ignore": [],
+  "ignore": [
+    "test"
+  ],
   "dependencies": {
     "gemini-loader": "~0"
+  },
+  "devDependencies": {
+    "requirejs": "~2.1.11"
   }
 }
