--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "gemini-loader": "~0"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
     "eslint": "^3.18.0",
     "eslint-config-carpages": "^0.2.0",
+    "grunt": "^1.0.1",
     "grunt-eslint": "^19.0.0",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.3"
+    "load-grunt-tasks": "^3.5.2",
+    "time-grunt": "^1.4.0"
   },
   "licenses": "MIT"
 }
