--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,16 @@
 {
   "name": "gemini-resetform",
   "authors": [
-    {"name": "Matt Rose", "email": "matt@mattrose.ca"}
+    {
+      "name": "Matt Rose",
+      "email": "matt@mattrose.ca"
+    }
   ],
   "main": [
     "gemini.resetform.js"
   ],
   "ignore": [],
   "dependencies": {
-    "gemini-loader": "~0"
+    "gemini-loader": "0.3.x"
   }
 }
