--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,12 @@
 {
   "name": "gemini-resetform",
-  "authors": [
-    {"name": "Matt Rose", "email": "matt@mattrose.ca"}
-  ],
-  "main": [
-    "gemini.resetform.js"
-  ],
-  "ignore": [
-    "test"
-  ],
+  "authors": [{ "name": "Matt Rose", "email": "matt@mattrose.ca" }],
+  "main": ["gemini.resetform.js"],
+  "ignore": ["test"],
   "dependencies": {
-    "gemini-loader": "~0"
+    "gemini-loader": "0.5.x"
   },
   "devDependencies": {
-    "requirejs": "~2.1.11"
+    "requirejs": "2.x"
   }
 }
